--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 			</div>
 			<div class="col-md-4">
 				<div class="parallax-image">
-				<a href="images\IMG_7651.JPG" data-fancybox="gallery" data-lightbox="gallery" data-title="Image 3"><img src="images\IMG_7651.JPG" class="img-fluid" alt=""></a>
+				<a href="images\IMG_7651.JPG" data-fancybox="gallery" data-lightbox="gallery" data-title="Image 3"><img src="images\IMG_7651.jpg" class="img-fluid" alt=""></a>
 			</div>
 			</div>
 			<div class="col-md-4">
