--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			<div class="row">
 				<div class="col-md-6">
 					<div class="d-flex flex-column justify-content-center align-items-center">
-						<img src="images/home-bg-removed.png" class="rounded img-fluid" width="600" height="600" alt="Rajshri Deshpande">
+						<img src="images/home-bg-removed-min.png" class="rounded img-fluid" width="600" height="600" alt="Rajshri Deshpande">
 						
 				</div>
 			</div>
