--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 		</div>
 	</header> -->
 
-	<header id="home" class="bg-pastel-yellow vh-100 d-flex flex-column justify-content-center align-items-center">
+	<header id="home" class="bg-pastel-yellow d-flex flex-column justify-content-center align-items-center">
 		<div class="container">
 		  <div class="row">
 			<div class="col-md-6">
