--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ She is currently based in Mumbai, India.</p>
 							<div class="row justify-content-center">
 								<div class="col-md-8">
 									<div class="embed-responsive embed-responsive-16by9">
-										<iframe width="100%" height="500" class="embed-responsive-item" src="https://www.youtube.com/embed/vN_cORn35hU"></iframe>
+										<iframe width="100%" height="500"  class="embed-responsive-item" src="https://www.youtube.com/embed/vN_cORn35hU" title="RajshriDeshpande-showreel" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 									</div>
 								</div>
 							</div>
